--- a/index.html
+++ b/index.html
@@ -79,12 +79,114 @@
 
         </section>
 
+        <section class="features2 flex width margin">
+
+            <div class="features2-content flex">
+
+                <h2>Features you will love & enjoy</h2>
+
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+
+                <div class="cards flex">
+                    <div class="card">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Drag & Drop Builder</h3>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Awesome Modern Design</h3>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Super Easy to Edit</h3>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+
+                </div>
+                
+            </div>
+
+            <div class="features2-image">
+                <div class="image">
+                    <img src="./images/architect.png" alt="">
+                </div>
+                <div class="experience flex">
+                    <h1>10+Year</h1>
+                    <h5>Experience</h5>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="facts flex width margin">
+            <div class="facts-content">
+                <h2>Some Facts</h2>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+
+            <div class="achievement margin">
+                <div class="box">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <strong>54</strong>
+                    <span>Awards Winnings</span>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/projects.png" alt="">
+                    <strong>1458</strong>
+                    <span>Project Finished</span>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/customers.png" alt="">
+                    <strong>590</strong>
+                    <span>Clients Worked</span>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/email.png" alt="">
+                    <strong>22578</strong>
+                    <span>Email Send</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsors width margin">
+            <h2>
+                Our Sponsors
+            </h2>
+
+            <p class="margin">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+
+            <div class="logo flex">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
     </main>
 
     <!-- Footer area -->
     
-    <footer>
-
+    <footer class="width margin flex">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
 </body>
